# gtakpsi-rush-app

./: README.md  deploy.sh  pis_questions.json  pis_timeslots.json  rush_nights.json  setup.py
client/: .env.development  .env.production  .firebaserc  index.html  package-lock.json  package.json  tailwind.config.js
client/.firebase/: hosting.ZGlzdA.cache
client/src/: App.jsx  main.jsx
client/src/components/: Badge.jsx  Button.jsx  Error.jsx  Loader.jsx  Navbar.jsx
client/src/components/AttendanceComponents/: DisplayInfo.jsx  SplashPage.jsx  SuccessPage.jsx
client/src/components/RegisterComponents/: BasicInfo.jsx  GetImage.jsx  InfoVerification.jsx  PisSignUp.jsx  SuccessPage.jsx
client/src/js/: image_processing.js  user.js  verifications.js
client/src/pages/: 404.jsx  AddPIS.jsx  AddTimeslotPage.jsx  Admin.jsx  AdminRushNight.jsx  Attendance.jsx  BrotherPIS.jsx  Dashboard.jsx  DeletePIS.jsx  FaceAttendance.jsx  Home.jsx  Login.jsx  OldHome.jsx  PIS.jsx  PISDashboard.jsx  Register.jsx  RusheePage.jsx  RusheeZoom.jsx
scripts/: PIS_Signups.xlsx  data_pull.py  pis_excel_sheet.py  rushees.xlsx  temp_ratings_fix.py
server/: .env  .gitignore  Cargo.toml
server/src/: main.rs
server/src/controllers/: admin.rs  db.rs  mod.rs  rushee.rs
server/src/middlewares/: attendance.rs  mod.rs  pis.rs  timeHelpers.rs  valid.rs
server/src/models/: Rushee.rs  misc.rs  mod.rs  pis.rs
