[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lambda_runtime = "0.6"
lambda_http = { version = "0.6", features = ["apigw_http"] }
tower = "0.4"
tower-http = { version = "0.3", features = ["cors"] }
mongodb = { version = "3.1.0"}
axum-extra = "0.9.6"
futures = "0.3"
bson = "2.13.0"
rand = "0.8.5"
chrono = "0.4"
dotenv = "0.15"

[[bin]]
name = "server"
path = "src/main.rs"